[package]
name = "les"
version = "0.1.0"
edition = "2021"
authors = ["Vasanthkumar Kalaiselvan <itsparser@gmail.com>"]
description = "less is the crate provide binding for crypto network"
license = "MIT"
repository = "https://github.com/crabby-ai/les"
keywords = ["exchange", "openlimits", "api", "cryptocurrency"]
exclude = [
    "tests/*",
    ".github/*"
]
include = [
    "**/*.rs",
    "Cargo.toml",
]


[features]
default = ["binance", "coinbase"]
binance = []
coinbase = []

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
chrono = "0.4.19"
rust_decimal = "1.14.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0.23"
derive_more = "0.99.11"
url = "2.2.0"
serde_urlencoded = "0.7.0"
anyhow = "1.0.38"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }
tokio = "1.6.0"
env_logger="0.10.0"
hex = "0.4.2"
log = "0.4.8"
hmac = "0.8.1"
sha2 = "0.9.1"



#################### message crate
futures-util = "0.3.12"


[dev-dependencies]
rust_decimal = "1.14.3"
tokio = { version = "1.0", features = ["full"] }
cross-test = "0.1.6"
futures = "0.3"
dotenv = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.20"
